# esp32s2-tinyusb-arduino-as-component

./: .gitignore  README.md  partitions.csv  sdkconfig
components/EspTinyUSB/: CMakeLists.txt
components/EspTinyUSB/classes/cdc/: cdcusb.cpp
components/EspTinyUSB/classes/hid/: hidusb.cpp
components/EspTinyUSB/classes/midi/: midiusb.cpp
components/EspTinyUSB/classes/web/: webusb.cpp
components/EspTinyUSB/core/: esptinyusb.cpp  usb_descriptors.cpp
components/EspTinyUSB/examples/msc/: CMakeLists.txt
components/EspTinyUSB/examples/webusb/: CMakeLists.txt
components/EspTinyUSB/include/: esptinyusb.h  hidusb.h  midiusb.h
main/: CMakeLists.txt  main.cpp  msc_disk.cpp
